Updated Multiplier logo and fixed baseline alignment.

--- a/_sass/landing.scss
+++ b/_sass/landing.scss
@@ -17,7 +17,8 @@
 
     .logo-container {
       display: inline-flex;
-      align-items: center;
+      align-items: baseline;
+      line-height: 0;
 
       img {
         margin-right: 8px;
